--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+= 1.5.9 - 03/04/2019 =
+* Fix - Update user meta profile_pic_id and prefix change on review notice
+
 = 1.5.8 - 02/15/2018 =
 * Feature - Custom profile picture upload on account profile and admin profile.
 * Feature - Dashboard widget for users activity.
